engine-net-2/examples/Errors/FilterError.grs
new graph "Rules.grg"

eval [?[t\auto]\<class mc>]

quit
